adding pf graphs

--- a/lab1.tex
+++ b/lab1.tex
@@ -15,4 +15,20 @@
 
 \maketitle
 
+\section{Potential Fields}
+\subsection{four\_ls}
+
+\begin{figure}[h!]
+	\caption{Potential field towards flag or base}
+	\includegraphics[scale=.4]{plots/four_ls/pfFlag.png}
+\end{figure}
+\begin{figure}[h!]
+	\caption{Potential fields away from obstacles}
+	\includegraphics[scale=.4]{plots/four_ls/pfObstacles.png}
+\end{figure}
+\begin{figure}[h!]
+	\caption{Potential field towards flag or base and away from obstacles}
+	\includegraphics[scale=.4]{plots/four_ls/pfFlagsAndObstacles.png}
+\end{figure}
+
 \end{document}
