added rotated box world

--- a/lab1.tex
+++ b/lab1.tex
@@ -31,4 +31,19 @@
 	\includegraphics[scale=.4]{plots/four_ls/pfFlagsAndObstacles.png}
 \end{figure}
 
+\subsection{rotated squares}
+
+\begin{figure}[h!]
+	\caption{Potential field towards flag or base}
+	\includegraphics[scale=.4]{plots/rotated_box_world/pfFlag.png}
+\end{figure}
+\begin{figure}[h!]
+	\caption{Potential fields away from obstacles}
+	\includegraphics[scale=.4]{plots/rotated_box_world/pfObstacles.png}
+\end{figure}
+\begin{figure}[h!]
+	\caption{Potential field towards flag or base and away from obstacles}
+	\includegraphics[scale=.4]{plots/rotated_box_world/pfFlagsAndObstacles.png}
+\end{figure}
+
 \end{document}
