--- a/lab1.tex
+++ b/lab1.tex
@@ -56,7 +56,7 @@ Our PF agent lost against theirs.
 We had our PF agent going really slow to guarantee that he followed the field path.
 After we ran the tests, we tweaked the values of the different fields as well as our controller and were significantly able to increase speed.
 
-\section{Time}
+\section{Time Spent}
 Taylor spent about 20 hours, with about 2 hours getting used to the language (Scala).
 Tyler spent about 17 hours.
 \end{document}
